--- a/client/src/users/components/userCard/userCard.css
+++ b/client/src/users/components/userCard/userCard.css
@@ -1,30 +1,51 @@
 .usercard {
   align-self: center;
-  width: 50dvw;
   height: 20dvh;
+  width: 50dvw;
   background-color: white;
-  background-image: url(../../assets/userprofile.png);
-  background-size: contain;
-  background-position: left;
-  background-repeat: no-repeat;
-  box-shadow: 1px 2px 10px grey;
-  border-radius: 12px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px rgb(194, 192, 192);
   z-index: 2;
   transform: translateY(-2em);
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  gap: 2dvw;
+  overflow: hidden;
+  font-size: 1.2dvw;
+}
+
+.profile-picture {
+  height: 100%;
 }
 
 .user-infos {
-  width: 70%;
-  padding: 1em;
-  display: flex;
-  line-height: 1.5em;
-  justify-content: space-between;
-}
-
-.user-infos p {
   display: flex;
   flex-direction: column;
+}
+
+.edit-infos {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 1em 1em 0 5em;
+}
+
+.edit-infos:hover {
+  color: var(--main-color);
+}
+
+.new-step-btn {
+  height: 3em;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--second-color);
+  color: white;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  z-index: 3;
+  transform: translate(60dvw, -10dvh);
 }
