--- a/client/src/users/pages/userDashboard.css
+++ b/client/src/users/pages/userDashboard.css
@@ -1,20 +1,35 @@
 .user-dashboard {
-  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 2em;
+  margin-bottom: 3em;
 }
 
-.user-dashboard button {
-  margin: 2em;
-  height: 3em;
-  padding: 0.5em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--second-color);
-  color: white;
-  font-size: 1em;
-  border: none;
+.my-steps,
+.my-labels {
+  width: 90dvw;
+  height: 40dvh;
+  margin: auto;
   border-radius: 5px;
+  box-shadow: 5px 5px 15px rgb(194, 192, 192);
+  padding: 1em;
+}
+
+.user-dashboard hr {
+  background-color: var(--main-color);
+  height: 1.5px;
+  width: 100%;
+  border: none;
+  margin-top: 1em;
+}
+
+.user-dashboard table {
+  width: 100%;
+  text-align: left;
+  font-weight: 200;
+}
+
+.user-dashboard table th {
+  font-weight: 400;
 }
