--- a/client/src/users/components/signIn/signIn.css
+++ b/client/src/users/components/signIn/signIn.css
@@ -1,37 +1,38 @@
-.signcontainer{
+.signcontainer {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
+    height: 6vh;
     padding: 0 1em;
     padding-top: 0.5em;
-    
-}
-.SignInAndConnect{
+  }
+  
+  .SignInAndConnect {
     font-family: sans-serif;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     border-radius: 2px;
     padding: 10px;
     gap: 5px;
     position: relative;
-    top:-14em;
+    top: -14em;
     color: var(--third-color);
-    border: 1px solid white; 
-}
-
-.line{
+    border: 1px solid white;
+  }
+  
+  .line {
     border-left: 2px solid var(--third-color);
-    height: 1em; 
-}
-
-.signIn,.connexion{
+    height: 1em;
+  }
+  
+  .signIn,
+  .connexion {
     font-size: 1em;
-    
     letter-spacing: 1.2px;
     cursor: pointer;
-
-    
-}
-a{
+  }
+  
+  a {
     text-decoration: none;
     color: inherit;
-}
+  }
+  
