--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,15 @@
   font-family: 'Inter';
 }
 
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
 #root,
 .app {
   width: 100vw;
+  height: 100vh;
 }
 
 p {
