--- a/client/src/admin/components/DemandTable/DemandeTable.css
+++ b/client/src/admin/components/DemandTable/DemandeTable.css
@@ -1,52 +1,65 @@
 .Base-table{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.table {
+.table-A-Traiter {
+    margin: 5dvw;
     justify-content: center;
-    margin-top: 8em;
     width: 70%;
+    border: 2px solid #DEDEDE;  
+    border-radius: 0.5em;
+    box-shadow: 0px 15px 12px rgba(0, 0, 0, 0.15);
   }
   
-  .table th,
-  .table td {
+  .table-A-Traiter th,
+  .table-A-Traiter td {
     padding: 8px;
     text-align: left;
-    border: 1px solid white;
   }
   
-  .table th {
+  .table-A-Traiter th {
     background-color: white;
   }
   
-  .table tbody tr:nth-child(even) {
+  .table-A-Traiter tbody tr:nth-child(even) {
     background-color: white;
   }
   
-  .table tbody tr:hover {
+  .table-A-Traiter tbody tr:hover {
     background-color: var(--clear-color)
   }
   
-  .table a {
+  .table-A-Traiter a {
     color: black;
     text-decoration: underline;
   }
 
+  .title-tableAdmin{
+   text-align:start;
+   font-size: large;
+   padding-left: 1dvh;
+ }
+  
+ /*boutton*/
 
-  
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .popup-content {
-    background-color: white;
-    padding: 16px;
-  }
+  .avancement {
+  font-size: 17px;
+  padding: 0.2em 1em;
+  border: transparent;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+  background: var(--clear-color);
+  color: white;
+  border-radius: 2px;
+ }
+ 
+ .avancement:hover{
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, var(--clear-color) 0%, var(--clear-color)100%);
+ }
+ 
+  .avancement:active {
+  transform: translate(0em, 0.2em);
+ }
