--- a/client/src/admin/components/FooterAdmin/FooterAdmin.css
+++ b/client/src/admin/components/FooterAdmin/FooterAdmin.css
@@ -1,5 +1,5 @@
 .footerAdmin {
-    width: 100%;
+    width: 100vw;
     height: 25dvh;
     background-color: var(--dark-color);
     bottom: 0;
@@ -7,7 +7,6 @@
     justify-content: space-evenly;
     align-items: center;
     color: white;
-    overflow: hidden;
   }
   
   .logo-container {
